creusot/tests/should_fail/prusti/at_expiry/possible_set_param.stderr
error[creusot]: Cannot move to the state set 'a since it might have been instantiated with multiple states
 --> possible_set_param.rs:7:5
  |
7 |     at::<'a>(*x)
  |     ^^^^^^^^

error: aborting due to previous error

